# mphys

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  conductor.json  imgui.ini
.github/workflows/: ci.yml  docs.yml
docs/: Doxyfile  materials_database.md
examples/: CMakeLists.txt
examples/convection_diffusion/: main.cpp
examples/heat_3d/: main.cpp
examples/poisson_2d/: main.cpp
examples/reactor_2d/: main.cpp
examples/single_particle_model/: main.cpp
examples/single_particle_model_electrolyte/: main.cpp
examples/spherical_diffusion/: main.cpp
examples/transient_2d/: main.cpp
examples/validation_1d_diffusion/: main.cpp
gui/: CMakeLists.txt  app_main.cpp  app_state.hpp  expr.hpp  gui_pch.hpp  gui_widgets.cpp  gui_widgets.hpp  mphys_gui.cpp  panels.hpp  panels_config.cpp  panels_view.cpp  serialization.cpp  serialization.hpp  shell.html  simulation.cpp  simulation.hpp
gui/assets/examples/: README.md  darcy_packed_bed.json  single_particle_model.json  single_particle_model_electrolyte.json
gui/include/: themes.h
include/mphys/: boundary_condition.hpp  diagonal_preconditioner.hpp  field.hpp  fvm_mesh.hpp  fvm_operators.hpp  mesh.hpp  mesh_model.hpp  mesh_steady_solver.hpp  mesh_transient_solver.hpp  model.hpp  mphys.hpp  sim_result.hpp  solver_options.hpp  state_vector.hpp  steady_solver.hpp  sun_context.hpp  sundials_types.hpp  topology.hpp  transient_solver.hpp  vtk_writer.hpp
include/mphys/materials/: database.hpp  electrodes.hpp  electrolytes.hpp  material.hpp  spm_materials.hpp  spme_materials.hpp
include/mphys/models/: darcy_packed_bed.hpp  model_info.hpp  model_registry.hpp  param_schema.hpp  spm.hpp  spme.hpp  transport.hpp  transport_mesh.hpp
scripts/: coverage.sh
src/: CMakeLists.txt  diagonal_preconditioner.cpp  fvm_mesh.cpp  fvm_operators.cpp  main.cpp  mesh.cpp  mesh_model.cpp  mesh_steady_solver.cpp  mesh_transient_solver.cpp  model.cpp  mphys.cpp  pch.hpp  solver_options.cpp  state_vector.cpp  steady_solver.cpp  topology.cpp  transient_solver.cpp  vtk_writer.cpp
src/models/: darcy_packed_bed.cpp  model_build_context.cpp  model_registry.cpp  register_builtins.cpp  transport.cpp
tests/: CMakeLists.txt  fvm_mesh_test.cpp  mesh2d_test.cpp  mesh3d_test.cpp  mesh_coupled_test.cpp  mesh_precond_test.cpp  mesh_solve_test.cpp  mesh_transient_test.cpp  test_boundary_condition.cpp  test_field.cpp  test_fvm_operators.cpp  test_integration_steady.cpp  test_integration_transient.cpp  test_main.cpp  test_materials.cpp  test_mesh.cpp  test_model.cpp  test_solver_options.cpp  test_spm.cpp  test_spme.cpp  test_state_vector.cpp  test_sundials_types.cpp  topology_test.cpp  transport_mesh_test.cpp  vtk_writer_test.cpp
